--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
 
   <meta charset="utf-8">
   <meta property="description" name="description" content="">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <script
+    src="https://kit.fontawesome.com/fc31dedf63.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
 
 <body>
