--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Aircall</title>
 
-<head>
-  <title>Aircall</title>
+    <meta charset="utf-8" />
+    <meta property="description" name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="../src/output.css" rel="stylesheet" />
+  </head>
 
-  <meta charset="utf-8">
-  <meta property="description" name="description" content="">
-</head>
-
-<body>
-  <div id="app"></div>
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
